# radio-monitor

./: .gitignore  capital.py  check_song.py  clean_db.py  db.md  db_init.py  deejay.py  do.py  justfile  m2o.py  missing_song.py  musicbrainz.py  pyproject.toml  query_spotify.py  r101.py  r105.py  radioairplay.py  rds.py  remove_duplictes.py  rtl.py  spotify.py  utils.py  virgin.py
fixtures/: e2e_2b_ko.yml  e2e_2b_match.yml  e2e_capital.yml  e2e_dj.yml  e2e_dupe_vasco.yml  e2e_m2o.yml  e2e_m2o_spotify.yml  e2e_pending_m2o.yml  e2e_r101.yml  e2e_r105.yml  e2e_rds.yml  e2e_virgin.yml  e2e_virgin_match.yml  e2e_virgin_musicbrainz.yml  e2e_virgin_spotify.yml  sp_fd_police.yml
monitor/: check_song.py  db_init.py  do.py  dupes.py  musicbrainz.py  reset_db.py  smatcher.py  spotify.py  utils.py
monitor/radio/: __init__.py  capital.py  deejay.py  do.py  freccia.py  m2o.py  r101.py  r105.py  rds.py  rtl.py  virgin.py
monitor/sql/: data_init.sql  db.md  db_init.sql  utils.sql
tests/: test_dupes.py  test_e2e_check.py  test_e2e_check_auto.py  test_e2e_check_by_user.py  test_e2e_duplicate.py  test_e2e_ko.py  test_e2e_manual.py  test_e2e_mb.py  test_e2e_multiple_save.py  test_e2e_ok.py  test_e2e_ok_db.py  test_e2e_solution.py  test_radio.py  test_solve_similar_candidates.py  test_spotify.py  test_utils.py
