[project]
name = "radio-monitor"
version = "0.1.0"
description = "Monitor italian radio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests", "beautifulsoup4"]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "G",
    "PIE",
    "RET",
    "TCH",
    "PTH",
    "PLE",
    "PLW",
    "RUF",
]
lint.ignore = []
line-length = 100
