[project]
name = "radio-monitor"
version = "0.2.0"
description = "Monitor italian radio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[tool.ruff]
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "G",
    "PIE",
    "RET",
    "TCH",
    "PTH",
    "PLE",
    "PLW",
    "RUF",
]
lint.ignore = []
line-length = 100
