[project]
name = "radio-monitor"
version = "0.2.0"
description = "Monitor italian radio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "onlymaps>=0.2.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "monitor"
module-root = ""

[tool.ruff]
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "G",
    "PIE",
    "RET",
    "TCH",
    "PTH",
    "PLE",
    "PLW",
    "RUF",
]
lint.ignore = []
line-length = 100

[dependency-groups]
dev = [
    "vcrpy>=8.1.0",
]
